[gd_scene load_steps=17 format=3 uid="uid://cyssynqbw33oq"]

[ext_resource type="Script" path="res://scenes/pomodoro timer/PomodoroTimer.gd" id="1_dpc6i"]
[ext_resource type="FontFile" uid="uid://cogm35cdl37e6" path="res://fonts/ComicMono/ComicMono.ttf" id="2_j8k3t"]
[ext_resource type="Texture2D" uid="uid://ddcu2t7y2pmog" path="res://icon.svg" id="3_e0otb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_weg84"]
bg_color = Color(0.435294, 0.741176, 0.564706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GDScript" id="GDScript_trt3g"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bk4ye"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"
script = SubResource("GDScript_trt3g")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pj5h6"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="Theme" id="Theme_r1dsa"]
default_font = ExtResource("2_j8k3t")
default_font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_ilrq5"]
font_size = 100
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.239216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5qed"]
bg_color = Color(0.489617, 0.617269, 0.727234, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 3

[sub_resource type="Theme" id="Theme_1f8c0"]
Button/styles/normal = SubResource("StyleBoxFlat_d5qed")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pueoj"]
bg_color = Color(0.118581, 0.118581, 0.118581, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pg1l"]
bg_color = Color(0.360784, 0.682353, 0.466667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsrcm"]
bg_color = Color(0.379893, 0.622226, 0.844851, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yftdv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hilug"]
bg_color = Color(0.833293, 0.471977, 0.584311, 1)

[node name="PomodoroTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dpc6i")

[node name="BackgroundPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_weg84")

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
custom_minimum_size = Vector2(450, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -102.5
offset_right = 136.5
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="ModeToggle" type="TextureButton" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_e0otb")
texture_pressed = SubResource("CompressedTexture2D_bk4ye")
ignore_texture_size = true
stretch_mode = 5

[node name="TotalFocusTime" type="Label" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "TFT [00:00]"

[node name="SettingMenuButton" type="TextureButton" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = SubResource("CompressedTexture2D_pj5h6")
ignore_texture_size = true
stretch_mode = 5

[node name="Button" type="Button" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 15
text = "test"

[node name="TimerLabel" type="Label" parent="BackgroundPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_r1dsa")
text = "25:00"
label_settings = SubResource("LabelSettings_ilrq5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 0

[node name="Spacer" type="Control" parent="BackgroundPanel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerButton" type="Button" parent="BackgroundPanel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_1f8c0")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="SkipButton" type="Button" parent="BackgroundPanel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 15
text = "skip"

[node name="SettingMenu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 8.0
offset_top = 40.0
offset_right = 398.0
offset_bottom = 256.0

[node name="Timer Setting" type="VBoxContainer" parent="SettingMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingMenu/Timer Setting"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="SettingMenu/Timer Setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
text = " Pomodoro Session"

[node name="FocusColor" type="ColorPickerButton" parent="SettingMenu/Timer Setting/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "color"
color = Color(0.435294, 0.741176, 0.564706, 1)
edit_alpha = false

[node name="PomoSession" type="SpinBox" parent="SettingMenu/Timer Setting/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 999.0
value = 25.0
alignment = 2

[node name="Label2" type="Label" parent="SettingMenu/Timer Setting/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "min"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingMenu/Timer Setting"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="SettingMenu/Timer Setting/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
text = " Break Session"

[node name="BreakColor" type="ColorPickerButton" parent="SettingMenu/Timer Setting/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "color"
color = Color(0.32549, 0.439216, 0.65098, 1)
edit_alpha = false

[node name="BreakSession" type="SpinBox" parent="SettingMenu/Timer Setting/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 999.0
value = 5.0
alignment = 2

[node name="Label2" type="Label" parent="SettingMenu/Timer Setting/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "min"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingMenu/Timer Setting"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="SettingMenu/Timer Setting/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = " Progressive Pomodoro"

[node name="ProgressivePomoToggle" type="TextureButton" parent="SettingMenu/Timer Setting/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_e0otb")
texture_pressed = ExtResource("3_e0otb")
ignore_texture_size = true
stretch_mode = 4

[node name="SessionRating" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pueoj")

[node name="VBoxContainer" type="VBoxContainer" parent="SessionRating"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="SessionRating/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Rate your focus state:"

[node name="Flow" type="Button" parent="SessionRating/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_2pg1l")
text = "Flow"

[node name="Focused" type="Button" parent="SessionRating/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_fsrcm")
text = "Focused
"

[node name="Neutral" type="Button" parent="SessionRating/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_yftdv")
text = "Neutral
"

[node name="Distracted" type="Button" parent="SessionRating/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_hilug")
text = "Distracted"

[node name="Utilities" type="Node" parent="."]

[node name="PomoTimer" type="Timer" parent="Utilities"]
unique_name_in_owner = true
wait_time = 1500.0

[connection signal="toggled" from="BackgroundPanel/VBoxContainer/HBoxContainer/ModeToggle" to="." method="_on_mode_toggle_toggled"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/HBoxContainer/SettingMenuButton" to="." method="_on_setting_menu_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BackgroundPanel/VBoxContainer/HBoxContainer2/TimerButton" to="." method="_on_timer_button_pressed"]
[connection signal="value_changed" from="SettingMenu/Timer Setting/HBoxContainer/PomoSession" to="." method="_on_pomo_session_value_changed"]
[connection signal="value_changed" from="SettingMenu/Timer Setting/HBoxContainer2/BreakSession" to="." method="_on_break_session_value_changed"]
[connection signal="toggled" from="SettingMenu/Timer Setting/HBoxContainer3/ProgressivePomoToggle" to="." method="_on_progressive_pomo_toggle_toggled"]
[connection signal="pressed" from="SessionRating/VBoxContainer/Flow" to="." method="_on_flow_pressed"]
[connection signal="pressed" from="SessionRating/VBoxContainer/Focused" to="." method="_on_focused_pressed"]
[connection signal="pressed" from="SessionRating/VBoxContainer/Neutral" to="." method="_on_neutral_pressed"]
[connection signal="pressed" from="SessionRating/VBoxContainer/Distracted" to="." method="_on_distracted_pressed"]
[connection signal="timeout" from="Utilities/PomoTimer" to="." method="_on_pomo_timer_timeout"]
